# BlasterHacks

./: .gitignore  README.md  script.js
FrontEnd/: data.json  grades.json  index.html  package.json  products.json  script.js  server.js  styles.css
FrontEnd/public/: data.json  index.html  pretty.json  script.js  styles.css
blasterhacks-rs/: Cargo.toml  data.json  pretty.json
blasterhacks-rs/src/: assignment.rs  data.rs  get_assignments.graphql  get_courses.graphql  grade.rs  groq.rs  main.rs  notes.md  schema.json
blasterhacks-rs/src/graphql/: get_assignments.graphql  get_grades.graphql
blasterhacks-rs/src/queries/: assignments.rs  grades.rs  mod.rs
blasterhacks-rs/src/types/: assignment.rs  data.rs  grade.rs  link.rs  mod.rs
blasterhacks-rs/src/ui/: app.rs  mod.rs
