[package]
name = "blasterhacks-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
graphql_client = { version = "0.14.0", features = ["reqwest", "graphql_query_derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
