[package]
name = "blasterhacks-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
crossterm = "0.28.1"
dotenv = "0.15.0"
graphql_client = { version = "0.14.0", features = ["reqwest", "graphql_query_derive"] }
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tui = "0.19.0"
